--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "exorcist": "0.4.0",
     "gulp": "3.9.0",
     "gulp-autoprefixer": "3.1.0",
+    "gulp-concat": "2.6.0",
     "gulp-html-replace": "1.5.5",
     "gulp-mocha": "2.2.0",
     "gulp-rename": "1.2.2",
