--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.3.14",
+    "highlight.js": "9.1.0",
     "jquery": "2.2.0",
     "react": "0.12.2",
     "react-router": "0.11.6",
